--- a/src/components/Replies.astro
+++ b/src/components/Replies.astro
@@ -22,4 +22,11 @@
   .reply-section hr {
     border: 1px solid rgb(0, 0, 0, .1)
   }
+
+  @media(width <= 660px) {
+    .reply-section {
+      padding-left: .5rem;
+      gap: 1em;
+    }
+  }
 </style>
