--- a/src/components/Comment.astro
+++ b/src/components/Comment.astro
@@ -59,9 +59,8 @@
 
   </div>
 
-  <div class="reply-form">
+  <div class="reply-form"></div>
 
-  </div>
 </div>
 
 <style>
@@ -77,7 +76,7 @@
     resize: none;
     outline: 1px solid var(--light-gray-blue);
     border-radius: var(--rounded-5);
-    color: var(--dark-blue);
+    color: var(--gray-blue);
     width: 100%;
     min-height: 5.5em;
     scrollbar-width: thin;
@@ -99,8 +98,12 @@
     gap: 1em 1.5em;
   }
 
-  .comment-wrapper[deleting] {
-    animation: fadeOut 400ms forwards
+  .comment {
+    animation: slideLeft 300ms forwards;
+  }
+
+  .comment[deleting] {
+    animation: slideRight 300ms forwards
   }
 
   .score-wrapper {
@@ -159,7 +162,7 @@
   }
 
   .created-at {
-    color: var(--dark-blue);
+    color: var(--gray-blue);
   }
 
   .actions-wrapper {
@@ -181,19 +184,19 @@
     font-size: var(--fs-400);
   }
 
-  .comment-wrapper[aria-details="user-comment"] .reply {
+  .comment[aria-details="user-comment"] .reply {
     display: none;
   }
 
-  .comment-wrapper[aria-details="user-comment"] .you-indicator {
+  .comment[aria-details="user-comment"] .you-indicator {
     display: block;
   }
 
-  .comment-wrapper[aria-details="user-comment"] .user-actions {
+  .comment[aria-details="user-comment"] .user-actions {
     display: flex;
   }
 
-  .comment-wrapper[aria-owns="reply"] .replying-to {
+  .comment[aria-owns="reply"] .replying-to {
     display: inline;
   }
 
@@ -213,7 +216,7 @@
   }
 
   .comment-content {
-    color: var(--dark-blue)
+    color: var(--gray-blue)
   }
 
   @media(width <= 660px) {
