--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -67,6 +67,15 @@ const { title } = Astro.props;
 		--rounded-30: 30px;
 	}
 
+	@keyframes loading {
+		0%, 70% {
+			opacity: .4;
+		}
+		100% {
+			opacity: 1;
+		}
+	}
+
 	@keyframes fadeIn {
 		0% {
 			opacity: 0;
@@ -85,6 +94,61 @@ const { title } = Astro.props;
 		}
 	}
 
+	@keyframes slideLeft {
+		0% {
+			opacity: 0;
+			transform: translateX(-300px);
+		}
+		100% {
+			opacity: 1;
+			transform: translateX(0px);
+		}
+	}
+
+	@keyframes slideRight {
+		0% {
+			opacity: 1;
+			transform: translateX(0px);
+		}
+		100% {
+			opacity: 0;
+			transform: translateX(300px);
+		}
+	}
+
+	@keyframes slideDown {
+		0% {
+			opacity: 0;
+			transform: translateY(-50px);
+		}
+		100% {
+			opacity: 1;
+			transform: translateY(0px);
+		}
+	}
+
+	@keyframes slideUp {
+		0% {
+			opacity: 1;
+			transform: translateY(0px);
+		}
+		100% {
+			opacity: 0;
+			transform: translateY(-50px);
+		}
+	}
+
+	@keyframes slideFromDown {
+		0% {
+			opacity: 0;
+			transform: translateY(50px);
+		}
+		100% {
+			opacity: 1;
+			transform: translateY(0px);
+		}
+	}
+
 	html {
 		font-family: var(--ff-html);
 		font-optical-sizing: auto;
@@ -97,8 +161,14 @@ const { title } = Astro.props;
 	}
 
 	body {
-		padding: 3.5em 0em;
+		padding: 3em 0em;
 		background-color: var(--lighter-gray);
+	}
+
+	@media(width <= 660px) {
+		body {
+			padding: 1.5em 0em;
+		}
 	}
 
 	* {
