--- a/src/components/Comment.astro
+++ b/src/components/Comment.astro
@@ -116,8 +116,8 @@
     color: var(--moderate-blue);
     font-weight: var(--fw-semibold);
     grid-row: 1/3;
-    width: fit-content;
-    height: fit-content;
+    max-width: 80px;
+    max-height: 95px;
   }
 
   .score-wrapper > div {
@@ -228,10 +228,11 @@
       grid-row: 3;
       flex-direction: row;
       grid-column: span 2;
+      min-width: 110px;
     }
 
     .score-wrapper > div {
-      padding-inline: 1.3em
+      width: 100%;
     }
 
     .header-wrapper {
