--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import CommentSection from '../components/CommentSection.astro';
+import Attribution from '../components/Attribution.astro';
 ---
 
 <Layout title="Frontend Mentor | Interactive comments section">
@@ -9,4 +10,7 @@ import CommentSection from '../components/CommentSection.astro';
 		<CommentSection />
 
 	</main>
+
+	<Attribution />
+
 </Layout>
